Library and  User Dashboard

--- a/AminWeb/Areas/User/Views/Account/UserData.cshtml
+++ b/AminWeb/Areas/User/Views/Account/UserData.cshtml
@@ -59,7 +59,7 @@
             <span role="alert" class="alert">لطفا این فیلد را وارد نمایید</span>
         </div>
 
-        <div class="row-reverse uk-margin-top" type="button" uk-toggle="target: #Modal-Edit">
+        <div class="row-reverse uk-margin-top">
             <button class="btn-primary">
                 ویرایش
             </button>
