--- a/AminWeb/Areas/User/Views/Shared/_Layout.cshtml
+++ b/AminWeb/Areas/User/Views/Shared/_Layout.cshtml
@@ -16,31 +16,36 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="" uk-icon="user">
+                            <a href="/User/Account/UserData" uk-icon="user">
                                 پروفایل
                             </a>
                         </li>
                         <li>
-                            <a href="" uk-icon="lock">
+                            <a href="/User/Account/ChangePassword" uk-icon="lock">
                                 تغییر رمز عبور
                             </a>
                         </li>
                         <li>
-                            <a href="" uk-icon="money">
+                            <a href="/User/Account/Wallet" uk-icon="money">
                                 کیف پول
                             </a>
                         </li>
                         <li>
-                            <a href="" uk-icon="chat">
+                            <a href="/User/Library/Index" uk-icon="bookmarks">
+                                کتابخانه
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/User/Chat/Index" uk-icon="chat">
                                 گفت و گو
                             </a>
                         </li>
                         <li>
-                            <a href="" uk-icon="video">
+                            <a href="/User/Video/YourVideos" uk-icon="video">
                                 ویدیو های شما
                             </a>
                         </li>
-                        <li>
+                        @*<li>
                             <a href="" uk-icon="addVideo">
                                 آپلود ویدیو
                             </a>
@@ -49,14 +54,14 @@
                             <a href="" uk-icon="class">
                                 کلاس ها
                             </a>
-                        </li>
+                        </li>*@
                         <li>
-                            <a href="" uk-icon="form">
+                            <a href="/User/Account/AccountCompletion" uk-icon="form">
                                 تکمیل اطلاعات
                             </a>
                         </li>
                         <li>
-                            <a href="" uk-icon="edu">
+                            <a href="/User/Account/AccountToInstitution" uk-icon="edu">
                                 حساب آموزشگاهی
                             </a>
                         </li>
