--- a/AminWeb/Views/Shared/_Layout.cshtml
+++ b/AminWeb/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
     <!-- #region Header -->
 
     <header role="navigation" class="top-nav row">
-        <nav class="uk-flex-auto row flex-1 uk-margin-left">
+        <nav class="uk-flex-auto row flex-1">
             <a href="#" class="uk-margin-auto-right lesser">
                 پروفایل
             </a>
@@ -79,7 +79,7 @@
                 <a role="listitem" href="#" class="lesser">قوانین</a>
             </div>
         </nav>
-        <a class="logo uk-margin-right" href="~/Views/Home/Index.cshtml">
+        <a class="logo" href="~/Views/Home/Index.cshtml">
             <img src="~/Resources/Static/Vector/Logo.svg" width="50" height="50" alt="Logo" />
         </a>
     </header>
