--- a/AminWeb/Content/Styles/Areas/UserDashboard.css
+++ b/AminWeb/Content/Styles/Areas/UserDashboard.css
@@ -170,7 +170,7 @@ backdrop-filter: saturate(80%);
 .side-category {
   width: 200px; }
   .side-category a {
-    margin: 8px 0; }
+    margin: 10px 0; }
 
 .datalist {
   display: flex;
@@ -229,3 +229,20 @@ backdrop-filter: saturate(80%);
     border-bottom: 1px solid #dbdbdb; }
   .table-simple tbody tr td {
     padding: 6px 0; }
+
+@media only screen and (max-width: 764px) {
+  .table-simple thead th {
+    padding-bottom: 12px;
+    border-bottom: 1px solid #dbdbdb; }
+  .table-simple tbody tr td {
+    padding: 6px 0; } }
+
+.blockquote {
+  color: #AFAFAF;
+  direction: rtl;
+  font-size: 20px; }
+
+.blockquote:before {
+  content: "|";
+  font-size: 24px;
+  font-weight: 900; }
