--- a/AminWeb/Content/Styles/Areas/UserDashboard.scss
+++ b/AminWeb/Content/Styles/Areas/UserDashboard.scss
@@ -11,7 +11,7 @@ $side-category-width: 200px;
     width: $side-category-width;
 
     a {
-        margin: 8px 0
+        margin: 10px 0
     }
 }
 
@@ -89,4 +89,30 @@ $side-category-width: 200px;
     tbody tr td {
         padding: 6px 0;
     }
+}
+
+@media only screen and (max-width: 764px) {
+    .table-simple {
+
+        thead th {
+            padding-bottom: 12px;
+            border-bottom: 1px solid #dbdbdb;
+        }
+
+        tbody tr td {
+            padding: 6px 0;
+        }
+    }
+}
+
+.blockquote {
+    color: #AFAFAF;
+    direction: rtl;
+    font-size: 20px;
+}
+
+.blockquote:before {
+    content: "|";
+    font-size: 24px;
+    font-weight: 900;
 }
