--- a/AminWeb/Content/Styles/Controls.css
+++ b/AminWeb/Content/Styles/Controls.css
@@ -240,11 +240,14 @@ backdrop-filter: saturate(80%);
   width: 100vw;
   z-index: 1000;
   backdrop-filter: blur(4px); }
-  .top-nav > nav a {
-    margin: auto 0;
-    margin-right: 16px; }
+  .top-nav > nav {
+    margin-left: 20px; }
+    .top-nav > nav a {
+      margin: auto 0;
+      margin-right: 16px; }
   .top-nav > .logo {
-    width: 50px; }
+    width: 50px;
+    margin-right: 24px; }
 
 a, details, summary, .anchor {
   color: #505050;
@@ -256,10 +259,10 @@ a, details, summary, .anchor {
 a:hover, summary:hover, .active {
   color: #F94646; }
 
-a.blue {
+.blue {
   color: #55ACEE; }
 
-a.blue:hover {
+.blue:hover {
   color: #8dc7f4; }
 
 .bottom-nav {
@@ -273,9 +276,9 @@ a.blue:hover {
   -moz-box-shadow: rgba(0, 0, 0, 0.12) 0 -6px 16px;
   -webkit-box-shadow: rgba(0, 0, 0, 0.12) 0 -6px 16px;
   box-shadow: rgba(0, 0, 0, 0.12) 0 -6px 16px;
-  -moz-border-radius: 32% 32% 0 0;
-  -webkit-border-radius: 32% 32% 0 0;
-  border-radius: 32% 32% 0 0;
+  -moz-border-radius: 16px 16px 0 0;
+  -webkit-border-radius: 16px 16px 0 0;
+  border-radius: 16px 16px 0 0;
   /* -moz-border-radius: 0;
     -webkit-border-radius: 0;
     border-radius: 0;*/ }
@@ -287,6 +290,17 @@ a.blue:hover {
     display: block; } }
 
 @media only screen and (max-device-width: 764px) {
+  .uk-container {
+    padding: 0px !important; }
+  .top-nav > nav {
+    margin-left: 10px; }
+    .top-nav > nav a {
+      margin: auto 0;
+      margin-right: 16px;
+      font-size: 14px; }
+  .top-nav > .logo {
+    width: 32px;
+    margin-right: 10px; }
   .bottom-nav {
     display: block; } }
 
@@ -433,7 +447,10 @@ a.blue:hover {
     margin: 0 !important; }
   .remove-at-mobile {
     display: none;
-    margin: 0 !important; }
+    margin-right: 0 !important;
+    margin-left: 0 !important;
+    margin-top: 0 !important;
+    margin-bottom: 0 !important; }
   .video-block {
     display: flex;
     flex-direction: row;
@@ -509,9 +526,6 @@ a.blue:hover {
     .video-grid > .video-block {
       margin-left: auto; } }
 
-.remove-at-mobile {
-  display: initial; }
-
 /*@media only screen and (max-width: 724px) {
     .side-category, .side-category-placeholder {
         display: none !important;
@@ -558,6 +572,39 @@ details, summary {
   .input-group input {
     background: transparent;
     border: none; }
+
+textarea {
+  padding: 8px 12px;
+  background: #EFEFEF;
+  border: 1px solid #ddd;
+  -moz-border-radius: 10px 10px 10px 10px;
+  -webkit-border-radius: 10px 10px 10px 10px;
+  border-radius: 10px 10px 10px 10px;
+  /* -moz-border-radius: 0;
+    -webkit-border-radius: 0;
+    border-radius: 0;*/
+  resize: vertical;
+  min-height: 48px; }
+
+input.uk-checkbox {
+  padding: 10px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  border-width: 2px; }
+
+select {
+  padding: 8px 12px;
+  background: #EFEFEF;
+  border: 1px solid #ddd;
+  -moz-border-radius: 10px 10px 10px 10px;
+  -webkit-border-radius: 10px 10px 10px 10px;
+  border-radius: 10px 10px 10px 10px;
+  /* -moz-border-radius: 0;
+    -webkit-border-radius: 0;
+    border-radius: 0;*/ }
+  select option {
+    background: white; }
 
 .alert {
   color: #f53d3d; }
