About Layout, Contact Layout, Profile View

--- a/AminWeb/Areas/User/Views/Chat/Index.cshtml
+++ b/AminWeb/Areas/User/Views/Chat/Index.cshtml
@@ -5,5 +5,100 @@
     Layout = "~/Areas/User/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Chat</h2>
+<div class="chat mat uk-padding uk-box-shadow-small column uk-margin-xlarge-bottom">
+    <h3 class="uk-margin-remove-top">
+        گفت و گو
+    </h3>
 
+    <div class="form-group">
+        <label for="Contacts">مخاطبان</label>
+        <div class="row-reverse">
+            <select name="Contacts" class="uk-width-1-1" dir="rtl">
+                <option>صدرا محمدی</option>
+                <option>حسن حسن اصل </option>
+                <option>ینال احمدزاده</option>
+            </select>
+        </div>
+    </div>
+
+    <div class="chat-room uk-margin-top uk-box-shadow-hover-large">
+        <ul class="uk-padding-remove">
+            <li>
+                <div class="message column">
+                    <div class="row">
+                        <span class="name uk-margin-auto-left">نام و نام خانوادگی</span>
+                        <span class="date">1399/08/08</span>
+                    </div>
+                    <p class="text">
+                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد
+                    </p>
+                </div>
+            </li>
+            <li>
+                <div class="message column">
+                    <div class="row">
+                        <span class="name uk-margin-auto-left">نام و نام خانوادگی</span>
+                        <span class="date">1399/08/08</span>
+                    </div>
+                    <p class="text">
+                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد
+                    </p>
+                </div>
+            </li>
+            <li>
+                <div class="message column">
+                    <div class="row">
+                        <span class="name uk-margin-auto-left">نام و نام خانوادگی</span>
+                        <span class="date">1399/08/08</span>
+                    </div>
+                    <p class="text">
+                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد
+                    </p>
+                </div>
+            </li>
+            <li>
+                <div class="message column">
+                    <div class="row">
+                        <span class="name uk-margin-auto-left">نام و نام خانوادگی</span>
+                        <span class="date">1399/08/08</span>
+                    </div>
+                    <p class="text">
+                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد
+                    </p>
+                </div>
+            </li>
+            <li>
+                <div class="message column">
+                    <div class="row">
+                        <span class="name uk-margin-auto-left">نام و نام خانوادگی</span>
+                        <span class="date">1399/08/08</span>
+                    </div>
+                    <p class="text">
+                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد
+                    </p>
+                </div>
+            </li>
+            <li>
+                <div class="message column">
+                    <div class="row">
+                        <span class="name uk-margin-auto-left">نام و نام خانوادگی</span>
+                        <span class="date">1399/08/08</span>
+                    </div>
+                    <p class="text">
+                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد
+                    </p>
+                </div>
+            </li>
+        </ul>
+    </div>
+
+    <div class="row-reverse uk-margin-top">
+        <div class="row uk-width-1-1">
+            <textarea type="text" name="Message" class="uk-width-1-1" placeholder="..."></textarea>
+            <button class="btn-pill-primary uk-margin-left uk-margin-auto-bottom">
+                <span uk-icon="icon:send;ratio:1.2"></span>
+            </button>
+        </div>
+    </div>
+
+</div>
