--- a/AminWeb/Content/Styles/Areas/UserDashboard.scss
+++ b/AminWeb/Content/Styles/Areas/UserDashboard.scss
@@ -116,3 +116,38 @@ $side-category-width: 200px;
     font-size: 24px;
     font-weight: 900;
 }
+
+
+.chat {
+    .contacts {
+        width: 64%;
+        margin-left: auto;
+    }
+
+    /*ScrollBar*/
+    /* width */
+    ::-webkit-scrollbar {
+        width: 12px;
+    }
+    /* Track */
+    ::-webkit-scrollbar-track {
+        @include border-radius(6px,6px,6px,6px);
+    }
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        @include border-radius(6px,6px,6px,6px);
+    }
+
+    &-room {
+        max-height: 70vh;
+        overflow-y: scroll !important;
+        direction: rtl;
+        @include mat;
+
+        .message {
+            margin: 0 12px;
+            border-top: 1px solid #eee;
+            padding-top: 16px;
+        }
+    }
+}
