--- a/AminWeb/Content/Styles/Global.css
+++ b/AminWeb/Content/Styles/Global.css
@@ -51,6 +51,12 @@ html {
     background: #dedede; }
   html ::-webkit-scrollbar-thumb {
     background: #c4c4c4;
+    -moz-border-radius: 16px 16px 16px 16px;
+    -webkit-border-radius: 16px 16px 16px 16px;
+    border-radius: 16px 16px 16px 16px;
+    /* -moz-border-radius: 0;
+    -webkit-border-radius: 0;
+    border-radius: 0;*/
     -moz-box-shadow: rgba(0, 0, 0, 0.12) 0 0px 12px;
     -webkit-box-shadow: rgba(0, 0, 0, 0.12) 0 0px 12px;
     box-shadow: rgba(0, 0, 0, 0.12) 0 0px 12px; }
