--- a/AminWeb/Content/Styles/_layout.scss
+++ b/AminWeb/Content/Styles/_layout.scss
@@ -139,8 +139,8 @@ $nav-height: 80px;
 @mixin grid($width) {
     display: grid;
     grid-template-rows: auto;
-    grid-gap: .6em;
-    grid-template-columns: repeat(auto-fit, minmax($width, 1fr));
+    grid-gap: 1em;
+    grid-template-columns: repeat(auto-fill, minmax($width, 1fr));
 }
 
 @mixin grid-gap($width, $gap) {
