--- a/AminWeb/Views/Home/Contact.cshtml
+++ b/AminWeb/Views/Home/Contact.cshtml
@@ -4,5 +4,47 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Contact</h2>
+<div class="white-area">
+
+</div>
+<img src="~/Resources/Static/Vector/biscuit/biscuit_main.svg" width="1" height="1" class="biscuit" alt="biscuit" />
+<div class="column uk-container white-area-margin">
+    <div class="mat uk-margin-auto
+         uk-width-1-2-at-m uk-width-1-1-at-s
+         uk-padding column uk-box-shadow-large">
+        <h3>
+            تماس با ما
+        </h3>
+        <div class="form-group">
+            <label for="Email">ایمیل</label>
+            <div class="input-group">
+                <input type="email" name="Email" />
+            </div>
+            <span role="alert" class="alert">لطفا این فیلد را وارد نمایید</span>
+        </div>
+        <div class="form-group">
+            <label for="Subject">موضوع</label>
+            <div class="row-reverse">
+                <select name="Subject" class="uk-width-1-1" dir="rtl">
+                    <option>لحاظ مشکلی در سایت</option>
+                    <option>طرح سوال</option>
+                    <option>دیگر</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="form-group uk-margin-top">
+            <label for="Description">توضیحات</label>
+            <textarea type="text" name="Description"></textarea>
+            <span role="alert" class="alert">لطفا این فیلد را وارد نمایید</span>
+        </div>
+
+        <div class="row uk-margin-medium-top">
+            <button class="btn-primary uk-margin-auto">
+                ثبت
+            </button>
+        </div>
+
+    </div>
+</div>
 
