--- a/AminWeb/Views/Home/Rules.cshtml
+++ b/AminWeb/Views/Home/Rules.cshtml
@@ -4,5 +4,16 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Rules</h2>
+<div class="white-area">
+
+</div>
+<img src="~/Resources/Static/Vector/biscuit/biscuit_main.svg" width="1" height="1" class="biscuit" alt="biscuit" />
+<div class="column uk-container white-area-margin">
+    <div class="mat uk-margin-auto
+         uk-width-2-3-at-m uk-width-1-1-at-s
+         uk-padding column uk-box-shadow-large">
+        <!-- #region Content -->
+        <!-- #endregion -->
+    </div>
+</div>
 
