--- a/AminWeb/Content/Styles/_layout.scss
+++ b/AminWeb/Content/Styles/_layout.scss
@@ -56,6 +56,11 @@
         width: 100vw;
         height: 9vh;
     }
+
+    .space-bottom-nav {
+        width: 100vw;
+        height: 64px;
+    }
 }
 
 $nav-height: 80px;
