--- a/AminWeb/Views/Home/Contact.cshtml
+++ b/AminWeb/Views/Home/Contact.cshtml
@@ -4,11 +4,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="white-area">
-
-</div>
-<img src="~/Resources/Static/Vector/biscuit/biscuit_main.svg" width="1" height="1" class="biscuit" alt="biscuit" />
-<div class="column uk-container white-area-margin">
+<div role="none" class="space-nav"></div>
+<div class="column uk-container">
     <div class="mat uk-margin-auto
          uk-width-1-2-at-m uk-width-1-1-at-s
          uk-padding column uk-box-shadow-large">
