--- a/AminWeb/Views/Home/Index.cshtml
+++ b/AminWeb/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@*@section MySection{
+@*-at-section MySection{
         <meta content="HELLO" />
     }*@
 
@@ -13,7 +13,7 @@
 <link href="~/Content/Styles/Pages/Index.min.css" rel="stylesheet" />
 <!-- #endregion -->
 
-<div class="media">
+<div class="media remove-at-mobile">
     <div class="column">
         <a href="https://www.instagram.com" class="uk-margin-small-bottom" uk-tooltip="title: اینستاگرام; pos:left">
             <img src="~/Resources/Static/Vector/Instagram.svg" alt="Instagram" />
