--- a/AminWeb/Views/Profile/_ProfileLayout.cshtml
+++ b/AminWeb/Views/Profile/_ProfileLayout.cshtml
@@ -4,7 +4,7 @@
 
 <link href="~/Content/Styles/Pages/Profile.min.css" rel="stylesheet" />
 
-<div class="space-nav"></div>
+<div role="none" class="space-nav"></div>
 
 <div class="uk-container">
     <div class="user mat column uk-box-shadow-medium uk-margin-medium-bottom">
