--- a/AminWeb/Views/Shared/_VideoBlock.cshtml
+++ b/AminWeb/Views/Shared/_VideoBlock.cshtml
@@ -17,7 +17,7 @@
     </div>
     <div class="text column">
         <div class="content column">
-            <a class="title">
+            <a href="/Video/VideoView" class="title">
                 این تیتر یک ویدیو می باشد
                 این تیتر یک ویدیو می باشد
                 این تیتر یک ویدیو می باشد
@@ -27,7 +27,7 @@
                 این توضیحات یک ویدیو می باشد بسار مختصر و مفید می باشد
                 این توضیحات یک ویدیو می باشد بسار مختصر و مفید می باشد
             </p>
-            <a class="tutor" uk-icon="tutor" href="#">
+            <a class="tutor" uk-icon="tutor" href="/Profile/Dashboard">
                 نام آپلود کننده
             </a>
         </div>
