--- a/AminWeb/Views/Video/VideoView.cshtml
+++ b/AminWeb/Views/Video/VideoView.cshtml
@@ -111,7 +111,7 @@
                     <div class="row star-container uk-margin-small-right" dir="rtl">
                         <a href="#Modal-Rate" class="rate icon-button" uk-toggle uk-tooltip="امتیاز دهی" uk-icon="favourite"></a>
                         <div class="Stars" style="--rating: 2.6;" uk-tooltip="title:2.6" aria-label="The rating of this video is 2.3 out of 5"></div>
-                        <span class="raiting">
+                        <span class="raiting remove-at-mobile">
                             2.6
                         </span>
                     </div>
