--- a/AminWeb/Areas/User/Views/Shared/_Layout.cshtml
+++ b/AminWeb/Areas/User/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <link href="~/Content/Styles/Areas/UserDashboard.min.css" rel="stylesheet" />
 
 
-<div class="space-nav"></div>
+<div role="none" class="space-nav"></div>
 <div class="uk-container">
     <content class="row-reverse uk-margin-medium-top">
         <div role="none" class="remove-at-mobile uk-margin-left">
@@ -13,65 +13,27 @@
                 @*<h4>
                         دسته بندی ها
                     </h4>*@
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="/User/Account/UserData" uk-icon="user">
-                                پروفایل
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/User/Account/ChangePassword" uk-icon="lock">
-                                تغییر رمز عبور
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/User/Account/Wallet" uk-icon="money">
-                                کیف پول
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/User/Library/Index" uk-icon="bookmarks">
-                                کتابخانه
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/User/Chat/Index" uk-icon="chat">
-                                گفت و گو
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/User/Video/YourVideos" uk-icon="video">
-                                ویدیو های شما
-                            </a>
-                        </li>
-                        @*<li>
-                            <a href="" uk-icon="addVideo">
-                                آپلود ویدیو
-                            </a>
-                        </li>
-                        <li>
-                            <a href="" uk-icon="class">
-                                کلاس ها
-                            </a>
-                        </li>*@
-                        <li>
-                            <a href="/User/Account/AccountCompletion" uk-icon="form">
-                                تکمیل اطلاعات
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/User/Account/AccountToInstitution" uk-icon="edu">
-                                حساب آموزشگاهی
-                            </a>
-                        </li>
-                    </ul>
-
-                </nav>
+                @Html.Partial("Navigation")
             </aside>
         </div>
         <div class="flex-1">
+
+            <button type="button" uk-toggle="target: #Modal-Navigation"
+                    class="button-navigation mat uk-padding-small uk-margin-auto-left uk-margin-small-bottom uk-box-shadow-medium">
+                <span uk-icon="icon:menu;ratio:1"></span>
+            </button>
+
             @RenderBody()
+
         </div>
     </content>
 </div>
+
+<!-- Modal Navigation -->
+<div id="Modal-Navigation" uk-modal>
+    <div class="uk-modal-dialog uk-modal-body menu">
+        @Html.Partial("Navigation")
+    </div>
+</div>
+
+
