--- a/AminWeb/Content/Styles/Controls.css
+++ b/AminWeb/Content/Styles/Controls.css
@@ -36,7 +36,9 @@ backdrop-filter: saturate(80%);
   font-size: var(--star-size);
   font-family: Times;
   line-height: 1;
-  overflow-y: hidden; }
+  overflow-y: hidden;
+  overflow-x: hidden;
+  overflow: hidden; }
   .Stars::before {
     content: '★★★★★';
     letter-spacing: 3px;
@@ -157,7 +159,10 @@ backdrop-filter: saturate(80%);
     height: 6vh; }
   .space-double {
     width: 100vw;
-    height: 9vh; } }
+    height: 9vh; }
+  .space-bottom-nav {
+    width: 100vw;
+    height: 64px; } }
 
 .space-nav {
   width: 100vw;
@@ -456,79 +461,104 @@ a:hover, summary:hover, .active {
     margin-top: 0 !important;
     margin-bottom: 0 !important; }
   .video-block {
-    display: flex;
-    flex-direction: row;
-    height: 164px;
-    width: 90vw;
     margin: auto; }
-    .video-block .top {
-      flex: none;
-      display: flex;
-      width: 230px !important; }
-      .video-block .top .thumbnail {
-        width: 230px !important;
-        height: 164px;
-        margin: 0 auto 0 0 !important;
-        -moz-border-radius: 8px 0 0 8px;
-        -webkit-border-radius: 8px 0 0 8px;
-        border-radius: 8px 0 0 8px;
-        /* -moz-border-radius: 0;
-    -webkit-border-radius: 0;
-    border-radius: 0;*/ }
-    .video-block .text {
-      flex: 1; }
-    .video-block hr {
-      display: none !important; }
-    .video-block .content {
-      padding: 10px 10px 0 10px;
-      height: 100px;
-      display: flex;
-      flex-direction: column; }
-      .video-block .content .title {
-        font-size: 17px;
-        margin: 0;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        display: -webkit-box;
-        -webkit-line-clamp: 1;
-        /* number of lines to show */
-        -webkit-box-orient: vertical; }
-      .video-block .content .desciption {
-        margin: 4px 0 0 0;
-        height: 36px;
-        font-size: 12px;
-        color: #5F5F5F;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        /* number of lines to show */
-        -webkit-box-orient: vertical; }
-      .video-block .content a.tutor {
-        margin-top: 4px;
-        font-size: 12px; }
-    .video-block hr {
-      display: none; }
-    .video-block .bottom {
-      padding: 0 10px;
-      display: flex;
-      flex-direction: column-reverse; }
-      .video-block .bottom .price {
-        font-size: 18px;
-        color: #73DA42; }
-      .video-block .bottom .star-container {
-        width: 100%; }
-        .video-block .bottom .star-container > span {
-          margin-top: auto;
-          width: 24px;
-          font-size: 12px; }
-  .video-grid {
-    display: grid;
-    grid-template-rows: auto;
-    grid-gap: 1em;
-    grid-template-columns: repeat(auto-fill, minmax(90vw, 1fr)); }
-    .video-grid > .video-block {
-      margin-left: auto; } }
+  /*#region Horizontal */
+  /*$video-block-height: 164px;
+    $video-block-width: 90vw;
+
+    .video-block {
+        @include row;
+        height: $video-block-height;
+        width: $video-block-width;
+        margin: auto;
+
+        .top {
+            flex: none;
+            display: flex;
+            width: 230px !important;
+
+            .thumbnail {
+                width: 230px !important;
+                height: $video-block-height;
+                margin: 0 auto 0 0 !important;
+                @include border-radius(8px,0,0,8px);
+            }
+        }
+
+        .text {
+            flex: 1;
+        }
+
+        hr {
+            display: none !important;
+        }
+
+        .content {
+            padding: 10px 10px 0 10px;
+            height: 100px;
+            @include column;
+
+            .title {
+                font-size: 17px;
+                margin: 0;
+                @include max-line(1);
+            }
+
+            .desciption {
+                margin: 4px 0 0 0;
+                height: 36px;
+                font-size: 12px;
+                color: #5F5F5F;
+                @include max-line(2);
+            }
+
+            a.tutor {
+                margin-top: 4px;
+                font-size: 12px;
+            }
+        }
+
+        hr {
+            display: none;
+        }
+
+        .bottom {
+            padding: 0 10px;
+            @include column-reverse;
+
+            .price {
+                font-size: 18px;
+                color: #73DA42;
+            }
+
+            .star-container {
+                width: 100%;
+
+                > span {
+                    margin-top: auto;
+                    width: 24px;
+                    font-size: 12px;
+                }
+            }
+        }
+    }
+
+    .video-grid {
+        @include grid($video-block-width);
+
+        > .video-block {
+            margin-left: auto;
+        }
+    }*/
+  /*#endregion */ }
+
+@media only screen and (max-device-width: 480px) {
+  .remove-at-mobile {
+    display: none !important;
+    margin-right: 0 !important;
+    margin-left: 0 !important;
+    margin-top: 0 !important;
+    margin-bottom: 0 !important; } }
 
 /*@media only screen and (max-width: 724px) {
     .side-category, .side-category-placeholder {
