--- a/AminWeb/Content/Styles/_starRating.scss
+++ b/AminWeb/Content/Styles/_starRating.scss
@@ -13,8 +13,10 @@ $checked-color: #fc0;
     font-size: var(--star-size);
     font-family: Times; // make sure ★ appears correctly
     line-height: 1;
-    overflow-y:hidden;
-   
+    overflow-y: hidden;
+    overflow-x: hidden;
+    overflow: hidden;
+
     &::before {
         content: '★★★★★';
         letter-spacing: 3px;
