--- a/AminWeb/Views/Shared/_Playlist.cshtml
+++ b/AminWeb/Views/Shared/_Playlist.cshtml
@@ -28,7 +28,7 @@
     </header>
     <div uk-slider>
         <div class="playlist uk-position-relative uk-visible-toggle" tabindex="-1">
-            <ul class="uk-slider-items uk-padding-small uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-3@m">
+            <ul class="uk-slider-items uk-padding-small uk-child-width-1-1 uk-child-width-1-2-at-s uk-child-width-1-3-at-m">
                 <li>
                     <div>
                         @Html.Partial("_VideoBlock")
