Modal Close fixes

--- a/AminWeb/Areas/User/Views/Account/UserData.cshtml
+++ b/AminWeb/Areas/User/Views/Account/UserData.cshtml
@@ -35,7 +35,7 @@
             <button class="btn-primary">
                 ویرایش
             </button>
-            <button class="btn-secondary uk-margin-right">
+            <button class="btn-secondary uk-modal-close uk-margin-right">
                 بازگشت
             </button>
         </div>
@@ -70,3 +70,5 @@
     </div>
 
 </div>
+
+
