--- a/AminWeb/Areas/User/Views/Account/Wallet.cshtml
+++ b/AminWeb/Areas/User/Views/Account/Wallet.cshtml
@@ -39,7 +39,7 @@
             <button class="btn-primary">
                 ویرایش
             </button>
-            <button class="btn-secondary uk-margin-right">
+            <button class="btn-secondary uk-modal-close uk-margin-right">
                 بازگشت
             </button>
         </div>
@@ -78,7 +78,7 @@
             <button class="btn-primary">
                 ویرایش
             </button>
-            <button class="btn-secondary uk-margin-right">
+            <button class="btn-secondary uk-modal-close uk-margin-right">
                 بازگشت
             </button>
         </div>
