--- a/AminWeb/Content/Styles/Areas/UserDashboard.scss
+++ b/AminWeb/Content/Styles/Areas/UserDashboard.scss
@@ -21,8 +21,8 @@ $side-category-width: 200px;
     }
 }
 
-.button-navigation{
-    display:none;
+.button-navigation {
+    display: none;
 }
 
 .datalist {
@@ -130,8 +130,6 @@ $side-category-width: 200px;
     color: #AFAFAF;
     direction: rtl;
     font-size: 20px;
-
-    
 }
 
 .blockquote:before {
@@ -173,3 +171,6 @@ $side-category-width: 200px;
         }
     }
 }
+
+// (a , b) + (c , d) = (a+c , b+d)
+// (a , b) * (c , d) = (ac + bd , ad - bc)
