--- a/AminWeb/Content/Styles/Controls.css
+++ b/AminWeb/Content/Styles/Controls.css
@@ -656,6 +656,16 @@ select {
   text-align: center;
   min-width: 150px; }
 
+@media only screen and (max-device-width: 480px) {
+  .btn-primary, .btn-secondary {
+    -moz-border-radius: 10px 10px 10px 10px;
+    -webkit-border-radius: 10px 10px 10px 10px;
+    border-radius: 10px 10px 10px 10px;
+    /* -moz-border-radius: 0;
+    -webkit-border-radius: 0;
+    border-radius: 0;*/
+    min-width: 100px; } }
+
 .btn-primary, .btn-pill-primary {
   color: white;
   background: #F94646;
