User navigation fixes

--- a/AminWeb/Areas/User/Views/Video/YourVideos.cshtml
+++ b/AminWeb/Areas/User/Views/Video/YourVideos.cshtml
@@ -248,6 +248,65 @@
                 <a href="" uk-icon="edit"></a>
             </div>
         </div>
+        <div class="row-reverse">
+            <details dir="rtl" class="uk-margin-small-bottom uk-width-1-1">
+                <summary>
+                    علوم تجربی
+                </summary>
+                <ul dir="ltr" class="column uk-margin-auto-left uk-nav uk-nav-default"
+                    uk-sortable="group:my; cls-custom: uk-box-shadow-small uk-background mat">
+                    <li>
+                        <div class="row-reverse uk-padding-small">
+                            <span>این یک ویدیو است</span>
+                            <div class="row uk-margin-auto-right">
+                                <a href="" uk-icon="trash"></a>
+                                <a href="" uk-icon="edit"></a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row-reverse uk-padding-small">
+                            <span>این یک ویدیو است</span>
+                            <div class="row uk-margin-auto-right">
+                                <a href="" uk-icon="trash"></a>
+                                <a href="" uk-icon="edit"></a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row-reverse uk-padding-small">
+                            <span>این یک ویدیو است</span>
+                            <div class="row uk-margin-auto-right">
+                                <a href="" uk-icon="trash"></a>
+                                <a href="" uk-icon="edit"></a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row-reverse uk-padding-small">
+                            <span>این یک ویدیو است</span>
+                            <div class="row uk-margin-auto-right">
+                                <a href="" uk-icon="trash"></a>
+                                <a href="" uk-icon="edit"></a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row-reverse uk-padding-small">
+                            <span>این یک ویدیو است</span>
+                            <div class="row uk-margin-auto-right">
+                                <a href="" uk-icon="trash"></a>
+                                <a href="" uk-icon="edit"></a>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </details>
+            <div class="row uk-margin-auto-right">
+                <a href="" uk-icon="trash"></a>
+                <a href="" uk-icon="edit"></a>
+            </div>
+        </div>
     </div>
 </div>
 
