--- a/AminWeb/Content/Styles/Areas/UserDashboard.scss
+++ b/AminWeb/Content/Styles/Areas/UserDashboard.scss
@@ -87,6 +87,10 @@ $side-category-width: 200px;
     color: #73DA42;
 }
 
+.muted {
+    color: #AEAEAE !important;
+}
+
 .table-simple {
     margin: 0;
     width: 100%;
