--- a/AminWeb/Areas/User/Views/Shared/Navigation.cshtml
+++ b/AminWeb/Areas/User/Views/Shared/Navigation.cshtml
@@ -40,13 +40,16 @@
                     کلاس ها
                 </a>
             </li>*@
-        <li>
-            <a href="/User/Account/AccountCompletion" uk-icon="form">
+        <li class="row-reverse">
+            <a href="/User/Account/AccountCompletion" uk-tooltip="" uk-icon="form">
                 تکمیل اطلاعات
             </a>
         </li>
-        <li>
-            <a href="/User/Account/AccountToInstitution" uk-icon="edu">
+
+        <li class="row-reverse">
+            <!-- در صورت تکمیل نبودن اطلاعات کاربر، لینک این اچ رف خالی باشد -->
+            <a href="/User/Account/AccountToInstitution" class="muted"
+               uk-tooltip="title:برای تبدیل کردن حساب  خود به حساب آموزشگاهی، تکمیل اطلاعات الزامی است;pos: bottom-right" uk-icon="edu">
                 حساب آموزشگاهی
             </a>
         </li>
